tests/spec/parse/snapshots/array_new_turbofish_args.snap
---
source: tests/spec/parse/mod.rs
description: "\nfn test() { let _xs = Array.new<int, 3>(); }\n"
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Block {
            items: [
                Let {
                    binding: Binding {
                        pattern: Identifier {
                            identifier: "_xs",
                            span: Span {
                                file_id: 0,
                                byte_offset: 17,
                                byte_length: 3,
                            },
                        },
                        annotation: None,
                        typed_pattern: None,
                        ty: Var {
                            id: uninferred,
                        },
                    },
                    value: Call {
                        expression: DotAccess {
                            expression: Identifier {
                                value: "Array",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 23,
                                    byte_length: 5,
                                },
                                binding_id: None,
                                qualified: None,
                            },
                            member: "new",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 23,
                                byte_length: 9,
                            },
                            dot_access_kind: None,
                            receiver_coercion: None,
                        },
                        args: [],
                        spread: None,
                        raw_type_args: [
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 33,
                                    byte_length: 3,
                                },
                            },
                            Constant {
                                value: 3,
                                text: None,
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 38,
                                    byte_length: 1,
                                },
                            },
                        ],
                        resolved_type_args: [],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 23,
                            byte_length: 19,
                        },
                        call_kind: None,
                    },
                    mutable: false,
                    mut_span: None,
                    else_block: None,
                    else_span: None,
                    assert: false,
                    typed_pattern: None,
                    ty: Var {
                        id: uninferred,
                    },
                    span: Span {
                        file_id: 0,
                        byte_offset: 13,
                        byte_length: 29,
                    },
                },
            ],
            ty: Var {
                id: uninferred,
            },
            span: Span {
                file_id: 0,
                byte_offset: 11,
                byte_length: 34,
            },
        },
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 44,
        },
    },
]
